<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/tb_responsavel_novo_paciente_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tb_responsavel_novo_paciente_apelido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_responsavel_novo_paciente_nome"
        android:layout_below="@+id/tb_responsavel_novo_paciente_nome"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/apelido"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tb_responsavel_novo_paciente_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_responsavel_novo_paciente_apelido"
        android:layout_below="@+id/tb_responsavel_novo_paciente_apelido"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/tb_responsavel_novo_paciente_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_responsavel_novo_paciente_email"
        android:layout_below="@+id/tb_responsavel_novo_paciente_email"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone" />

    <Button
        android:id="@+id/bt_responsavel_novo_paciente_validar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/validar"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tb_responsavel_novo_paciente_telefone"
        android:layout_alignRight="@+id/tb_responsavel_novo_paciente_telefone"
        android:layout_alignLeft="@+id/tb_responsavel_novo_paciente_telefone" />

    <Button
        android:id="@+id/bt_responsavel_novo_paciente_Cancelar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_below="@+id/bt_responsavel_novo_paciente_validar"
        android:layout_alignRight="@+id/bt_responsavel_novo_paciente_validar"
        android:layout_alignLeft="@+id/bt_responsavel_novo_paciente_validar" />

    <TextView
        android:id="@+id/text_responsavel_novo_paciente_informacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/est_informacao"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/bt_responsavel_novo_paciente_Cancelar"
        android:layout_centerHorizontal="true" />


</RelativeLayout>