<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/tb_configuracao_dialog_resppaciente_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tb_configuracao_dialog_resppaciente_apelido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_configuracao_dialog_resppaciente_nome"
        android:layout_below="@+id/tb_configuracao_dialog_resppaciente_nome"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/apelido"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tb_configuracao_dialog_resppaciente_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_configuracao_dialog_resppaciente_apelido"
        android:layout_below="@+id/tb_configuracao_dialog_resppaciente_apelido"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/tb_configuracao_dialog_resppaciente_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_configuracao_dialog_resppaciente_email"
        android:layout_below="@+id/tb_configuracao_dialog_resppaciente_email"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone" />

    <Button
        android:id="@+id/bt_configuracao_dialog_resppaciente_validar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_configuracao_dialog_resppaciente_telefone"
        android:layout_below="@+id/tb_configuracao_dialog_resppaciente_telefone"
        android:layout_marginTop="15dp"
        android:text="@string/validar" />

    <Button
        android:id="@+id/bt_configuracao_dialog_resppaciente_Cancelar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bt_configuracao_dialog_resppaciente_validar"
        android:layout_alignRight="@+id/tb_configuracao_dialog_resppaciente_telefone"
        android:text="@string/cancelar" />

    <TextView
        android:id="@+id/text_configuracao_dialog_resppaciente_informacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_configuracao_dialog_resppaciente_validar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/est_informacao"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ProgressBar
        android:id="@+id/loading_configuracao_dialog_paciente_novo"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_configuracao_dialog_resppaciente_informacao"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
