<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_responsavel_itemtipohoje_paciente_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:textColor="@color/preto"
        android:text="@string/paciente"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_responsavel_itemtipohoje_hora_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textColor="@color/cinzento"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignLeft="@+id/text_responsavel_itemtipohoje_paciente_value"
        android:layout_below="@+id/text_responsavel_itemtipohoje_paciente_value" />

    <TextView
        android:id="@+id/text_responsavel_itemtipohoje_marcacao_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marcacao"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cinzento"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/text_responsavel_itemtipohoje_paciente_value"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/text_responsavel_itemtipohoje_local_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cinzento"
        android:layout_below="@+id/text_responsavel_itemtipohoje_paciente_value"
        android:layout_toRightOf="@+id/text_responsavel_itemtipohoje_hora_value"
        android:layout_marginLeft="5dp" />

</RelativeLayout>
