<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_responsavel_itemtipolocalizacao_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:text="@string/paciente"
        android:textColor="@color/preto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_responsavel_itemtipolocalizacao_rua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_responsavel_itemtipolocalizacao_paciente"
        android:layout_below="@+id/text_responsavel_itemtipolocalizacao_paciente"
        android:text="@string/rua"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cinzento" />



    <TextView
        android:id="@+id/text_responsavel_itemtipolocalizacao_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cinzento"
        android:layout_alignTop="@+id/text_responsavel_itemtipolocalizacao_rua"
        android:layout_toRightOf="@+id/text_responsavel_itemtipolocalizacao_rua" />

</RelativeLayout>